# pyaddy

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ruff.yml
src/pyaddy/: __init__.py  __main__.py  addy.py  env.cfg
src/pyaddy/API/: addy.py  addy_key.py  alias_bulk_actions.py  aliases.py  api_details.py  domain.py  url.py
src/pyaddy/commands/: alias_bulk_actions_cmd.py  aliases_cmd.py  api_details_cmd.py  domain_cmd.py
tests/: test_alias_bulk_actions.py  test_aliases.py  test_api_details.py
