[tool.poetry]
name = "pyaddy"
version = "0.1.0"
description = "A Python package/cli to interact with addy.io"
authors = ["Maurice Saldivar <maurice.a.saldivar@gmail.com>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
